[project]
name = "volc_knowledge_mcp"
version = "0.1.0"
description = "火山方舟知识库检索MCP服务"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "volcengine>=1.0.0",
]

[project.scripts]
volc_knowledge_mcp = "volc_knowledge_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
